--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-TEST
+<img src="img1.jpeg" alt="HKUST ART">
+<img src="img2.jpeg" alt="HKUST ART">
+<img src="img3.jpeg" alt="HKUST ART">
+<img src="img4.jpeg" alt="HKUST ART">
+<img src="img5.jpeg" alt="HKUST ART">
+<img src="img6.jpeg" alt="HKUST ART">
