--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<img src="img1.jpeg" alt="HKUST ART">
-<img src="img2.jpeg" alt="HKUST ART">
-<img src="img3.jpeg" alt="HKUST ART">
-<img src="img4.jpeg" alt="HKUST ART">
-<img src="img5.jpeg" alt="HKUST ART">
-<img src="img6.jpeg" alt="HKUST ART">
+<img src="img1.jpeg" width=1024px height=694px alt="HKUST ART">
+<img src="img2.jpeg" width=1024px height=694px alt="HKUST ART">
+<img src="img3.jpeg" width=1024px height=694px alt="HKUST ART">
+<img src="img4.jpeg" width=1024px height=694px alt="HKUST ART">
+<img src="img5.jpeg" width=1024px height=694px alt="HKUST ART">
+<img src="img6.jpeg" width=1024px height=694px alt="HKUST ART">
